# msfs-vulkan

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  msfs-vulkan.example.toml  runtime.lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/msfs-vulkan-cli/: Cargo.toml
crates/msfs-vulkan-cli/src/: main.rs
crates/msfs-vulkan-core/: Cargo.toml
crates/msfs-vulkan-core/src/: config.rs  deployment.rs  discovery.rs  download.rs  launch.rs  lib.rs  state.rs
crates/msfs-vulkan-gui/: Cargo.toml  build.rs
crates/msfs-vulkan-gui/src/: main.rs
crates/msfs-vulkan-vulkan/: Cargo.toml
crates/msfs-vulkan-vulkan/src/: lib.rs
docs/: CONFIGURATION.md  DEVELOPMENT.md  USAGE.md
