[package]
name = "msfs-vulkan-core"
description = "Configuration, discovery, deployment, and launch primitives for msfs-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
flate2 = "1.1.9"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4.46"
toml.workspace = true
ureq = { version = "2", features = ["json"] }
zstd = "0.13.3"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
