[package]
name = "msfs-vulkan-vulkan"
description = "Vulkan capability probe for msfs-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ash.workspace = true
serde.workspace = true

[lints]
workspace = true
